--- a/_dev/src/template/page/index.pug
+++ b/_dev/src/template/page/index.pug
@@ -12,7 +12,7 @@ block content
 					a.button.button_orange.slide__button(href="#") забронировать
 
 	// ====== apartments ======= 
-	.apartments
+	.apartments.apartments_main
 		._container
 			ul._row.apartments-list
 				li.apartments-item
