--- a/_dev/src/template/page/news.pug
+++ b/_dev/src/template/page/news.pug
@@ -22,3 +22,48 @@ block content
 			.title
 				.title__inner
 					.title__text Новости
+
+			ul._row.news-list
+				li.news-item
+					a.news-item__img-holder(href="#")
+						img.news-item__img(src="img/photos/photo_1.jpg", alt="")
+					.news-item__date 01.03.2018
+					.news-item__text
+						| Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim, veniam? Lorem ipsum dolor veniam? Lorem ipsum dolor						| Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim, veniam? Lorem ipsum dolor veniam? Lorem ipsum dolor
+						a.news-item__text-more(href="#") подробнее >
+				li.news-item
+					a.news-item__img-holder(href="#")
+						img.news-item__img(src="img/photos/photo_1.jpg", alt="")
+					.news-item__date 01.03.2018
+					.news-item__text
+						| Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim, veniam? Lorem ipsum dolor veniam? Lorem ipsum dolor
+						a.news-item__text-more(href="#") подробнее >
+				li.news-item
+					a.news-item__img-holder(href="#")
+						img.news-item__img(src="img/photos/photo_1.jpg", alt="")
+					.news-item__date 01.03.2018
+					.news-item__text
+						| Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim, veniam? Lorem ipsum dolor veniam? Lorem ipsum dolor
+						a.news-item__text-more(href="#") подробнее >
+				li.news-item
+					a.news-item__img-holder(href="#")
+						img.news-item__img(src="img/photos/photo_1.jpg", alt="")
+					.news-item__date 01.03.2018
+					.news-item__text
+						| Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim, veniam? Lorem ipsum dolor veniam? Lorem ipsum dolor
+						a.news-item__text-more(href="#") подробнее >
+
+			.paging
+				ul.paging__list
+					li.paging__item.paging__item_prev
+						a.paging__link(href="#") <<
+					li.paging__item.paging__item_active
+						a.paging__link(href="#") 1
+					li.paging__item
+						a.paging__link(href="#") 2
+					li.paging__item
+						a.paging__link(href="#") 3
+					li.paging__item
+						a.paging__link(href="#") 4
+					li.paging__item.paging__item_next
+						a.paging__link(href="#") >>
