--- a/_dev/src/style/page/news.scss
+++ b/_dev/src/style/page/news.scss
@@ -1,5 +1,46 @@
 /*! ===== news ===== */
 .news {
 
+	&-list {
+
+	}
+
+	&-item {
+		float: left;
+		width: 50%;
+		padding: 15px;
+
+		&:nth-of-type(2n+1) {
+			clear: both;
+		}
+
+		&__img {
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+
+			&-holder {
+				height: 500px;
+
+			}
+		}
+
+		&__date {
+			margin-top: 5px;
+			color: #aaa;
+		}
+
+		&__text {
+			font-size: 14px;
+			line-height: 1.5em;
+
+			&-more {
+				display: inline-block;
+				margin-left: 15px;
+				color: $body-font-color;
+				text-decoration: underline;
+			}
+		}
+	}
 }
 
