--- a/_dev/src/template/section/_head.pug
+++ b/_dev/src/template/section/_head.pug
@@ -16,6 +16,9 @@ link(rel="stylesheet" href="css/vendor/owl.carousel.min.css")
 link(rel="stylesheet" href="css/vendor/jquery.fancybox.css")
 link(rel="stylesheet" href="css/vendor/jquery.fancybox-thumbs.css")
 link(rel="stylesheet" href="css/vendor/jquery.fancybox-buttons.css")
+link(rel="stylesheet" href="css/vendor/jquery-ui.css")
+link(rel="stylesheet" href="css/vendor/jquery-ui.structure.min.css")
+link(rel="stylesheet" href="css/vendor/jquery-ui.theme.min.css")
 link(rel="stylesheet" href="css/main.css")
 
 // Scripts defer 
@@ -25,6 +28,8 @@ script(src="js/vendor/jquery.fancybox.pack.js" defer)
 script(src="js/vendor/jquery.fancybox-buttons.js" defer)
 script(src="js/vendor/jquery.fancybox-media.js" defer)
 script(src="js/vendor/jquery.fancybox-thumbs.js" defer)
+script(src="js/vendor/jquery-ui.min.js" defer)
+script(src="js/vendor/datepicker-ru.js" defer)
 script(src="js/main.js" defer)
 
 // html5shiv
