--- a/_dev/src/template/section/header.pug
+++ b/_dev/src/template/section/header.pug
@@ -45,6 +45,6 @@ header.header
 							a.menu-link(href="contacts.html") контакты
 					
 					if show_button
-						a.button.button_orange(href="#") забронировать
+						a.button.button_orange(href="booking.html") забронировать
 	
 		include breadcrumbs
