--- a/_dev/src/style/section/header.scss
+++ b/_dev/src/style/section/header.scss
@@ -103,11 +103,12 @@ header.header {
 
 .header__menu {
 	text-align: right;
+	
+	.button {
+		margin-top: 25px;
+	}
 }
 
-.button {
-	margin-top: 25px;
-}
 
 .menu {
 	margin-top: 40px;
@@ -125,14 +126,15 @@ header.header {
 			& .menu-link {
 				border-bottom-left-radius: 0;
 				border-bottom-right-radius: 0;
+			}
 
-				&:hover ~ .submenu {
-					display: block;
-				}
+			&:hover .submenu {
+				display: block;
 			}
 		}
 
-		&_active .menu-link {
+		&_active > .menu-link,
+		&:hover > .menu-link {
 			background-color: $orange;
 		}
 	}
