Add news-in, form validation

--- a/_dev/src/style/common/general.scss
+++ b/_dev/src/style/common/general.scss
@@ -83,6 +83,7 @@ h1[class], h2[class], h3[class], h4[class], h5[class], h6[class], p[class] {
 
 main.main {
   flex: 1 0 auto;
+  padding: 0 15px;
 }
 
 /*! --- standart buttons --- */
