--- a/_dev/src/template/page/news.pug
+++ b/_dev/src/template/page/news.pug
@@ -25,33 +25,33 @@ block content
 
 			ul._row.news-list
 				li.news-item
-					a.news-item__img-holder(href="#")
+					a.news-item__img-holder(href="news-in.html")
 						img.news-item__img(src="img/photos/photo_1.jpg", alt="")
 					.news-item__date 01.03.2018
 					.news-item__text
 						| Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim, veniam? Lorem ipsum dolor veniam? Lorem ipsum dolor						| Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim, veniam? Lorem ipsum dolor veniam? Lorem ipsum dolor
-						a.news-item__text-more(href="#") подробнее >
+						a.news-item__text-more(href="news-in.html") подробнее >
+				li.news-item
+					a.news-item__img-holder(href="news-in.html")
+						img.news-item__img(src="img/photos/photo_1.jpg", alt="")
+					.news-item__date 01.03.2018
+					.news-item__text
+						| Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim, veniam? Lorem ipsum dolor veniam? Lorem ipsum dolor
+						a.news-item__text-more(href="news-in.html") подробнее >
+				li.news-item
+					a.news-item__img-holder(href="news-in.html")
+						img.news-item__img(src="img/photos/photo_1.jpg", alt="")
+					.news-item__date 01.03.2018
+					.news-item__text
+						| Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim, veniam? Lorem ipsum dolor veniam? Lorem ipsum dolor
+						a.news-item__text-more(href="news-in.html") подробнее >
 				li.news-item
 					a.news-item__img-holder(href="#")
 						img.news-item__img(src="img/photos/photo_1.jpg", alt="")
 					.news-item__date 01.03.2018
 					.news-item__text
 						| Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim, veniam? Lorem ipsum dolor veniam? Lorem ipsum dolor
-						a.news-item__text-more(href="#") подробнее >
-				li.news-item
-					a.news-item__img-holder(href="#")
-						img.news-item__img(src="img/photos/photo_1.jpg", alt="")
-					.news-item__date 01.03.2018
-					.news-item__text
-						| Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim, veniam? Lorem ipsum dolor veniam? Lorem ipsum dolor
-						a.news-item__text-more(href="#") подробнее >
-				li.news-item
-					a.news-item__img-holder(href="#")
-						img.news-item__img(src="img/photos/photo_1.jpg", alt="")
-					.news-item__date 01.03.2018
-					.news-item__text
-						| Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim, veniam? Lorem ipsum dolor veniam? Lorem ipsum dolor
-						a.news-item__text-more(href="#") подробнее >
+						a.news-item__text-more(href="news-in.html") подробнее >
 
 			.paging
 				ul.paging__list
