--- a/_dev/src/template/section/_head.pug
+++ b/_dev/src/template/section/_head.pug
@@ -19,6 +19,7 @@ link(rel="stylesheet" href="css/vendor/jquery.fancybox-buttons.css")
 link(rel="stylesheet" href="css/vendor/jquery-ui.css")
 link(rel="stylesheet" href="css/vendor/jquery-ui.structure.min.css")
 link(rel="stylesheet" href="css/vendor/jquery-ui.theme.min.css")
+link(rel="stylesheet" href="css/vendor/validity.css")
 link(rel="stylesheet" href="css/main.css")
 
 // Scripts defer 
@@ -30,6 +31,7 @@ script(src="js/vendor/jquery.fancybox-media.js" defer)
 script(src="js/vendor/jquery.fancybox-thumbs.js" defer)
 script(src="js/vendor/jquery-ui.min.js" defer)
 script(src="js/vendor/datepicker-ru.js" defer)
+script(src="js/vendor/validity.js" defer)
 script(src="js/main.js" defer)
 
 // html5shiv
