--- a/_dev/src/style/common/general.scss
+++ b/_dev/src/style/common/general.scss
@@ -41,7 +41,8 @@ body {
   font-size: 100%;
   color: $body-font-color;
   background: $body-color url(../img/bg_body.png) 0 50% no-repeat;
-  background-size: cover;
+  // background-size: cover;
+  background-position: top center;
   word-wrap: break-word;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
