--- a/_dev/src/template/page/index.pug
+++ b/_dev/src/template/page/index.pug
@@ -16,35 +16,41 @@ block content
 		._container
 			ul._row.apartments-list
 				li.apartments-item
-					a.apartments-link(href="#")
+					a.apartments-link(href="numer.html")
 						.apartments-img-holder
 							img.apartments-img(src="/img/apartments/photo_1.jpg", alt="")
-						.apartments-item__text Стандарт премиум
+						.apartments-item__text
+							.apartments-item__text-inner Стандарт премиум
 				li.apartments-item
-					a.apartments-link(href="#")
+					a.apartments-link(href="numer.html")
 						.apartments-img-holder
 							img.apartments-img(src="/img/apartments/photo_2.jpg", alt="")
-						.apartments-item__text Закарпатский дом
+						.apartments-item__text
+							.apartments-item__text-inner Закарпатский дом
 				li.apartments-item
-					a.apartments-link(href="#")
+					a.apartments-link(href="numer.html")
 						.apartments-img-holder
 							img.apartments-img(src="/img/apartments/photo_3.jpg", alt="")
-						.apartments-item__text Стандарт
+						.apartments-item__text
+							.apartments-item__text-inner Стандарт
 				li.apartments-item
-					a.apartments-link(href="#")
+					a.apartments-link(href="numer.html")
 						.apartments-img-holder
 							img.apartments-img(src="/img/apartments/photo_4.jpg", alt="")
-						.apartments-item__text Эконом
+						.apartments-item__text
+							.apartments-item__text-inner Эконом
 				li.apartments-item
-					a.apartments-link(href="#")
+					a.apartments-link(href="numer.html")
 						.apartments-img-holder
 							img.apartments-img(src="/img/apartments/photo_5.jpg", alt="")
-						.apartments-item__text Эконом +
+						.apartments-item__text
+							.apartments-item__text-inner Эконом +
 				li.apartments-item
-					a.apartments-link(href="#")
+					a.apartments-link(href="numer.html")
 						.apartments-img-holder
 							img.apartments-img(src="/img/apartments/photo_6.jpg", alt="")
-						.apartments-item__text Семейный коттедж
+						.apartments-item__text
+							.apartments-item__text-inner Семейный коттедж
 
 			.apartments-decor
 				img.apartments-decor__img(src="/img/summer-time.png", alt="summer-time")
