--- a/_dev/src/template/page/numers.pug
+++ b/_dev/src/template/page/numers.pug
@@ -21,37 +21,37 @@ block content
 		._container
 			ul._row.apartments-list
 				li.apartments-item
-					a.apartments-link(href="numers-in.html")
+					a.apartments-link(href="numer.html")
 						.apartments-img-holder
 							img.apartments-img(src="/img/apartments/photo_1.jpg", alt="")
 						.apartments-item__text
 							.apartments-item__text-inner Стандарт премиум
 				li.apartments-item
-					a.apartments-link(href="numers-in.html")
+					a.apartments-link(href="numer.html")
 						.apartments-img-holder
 							img.apartments-img(src="/img/apartments/photo_2.jpg", alt="")
 						.apartments-item__text
 							.apartments-item__text-inner Закарпатский дом
 				li.apartments-item
-					a.apartments-link(href="numers-in.html")
+					a.apartments-link(href="numer.html")
 						.apartments-img-holder
 							img.apartments-img(src="/img/apartments/photo_3.jpg", alt="")
 						.apartments-item__text
 							.apartments-item__text-inner Стандарт
 				li.apartments-item
-					a.apartments-link(href="numers-in.html")
+					a.apartments-link(href="numer.html")
 						.apartments-img-holder
 							img.apartments-img(src="/img/apartments/photo_4.jpg", alt="")
 						.apartments-item__text
 							.apartments-item__text-inner Эконом
 				li.apartments-item
-					a.apartments-link(href="numers-in.html")
+					a.apartments-link(href="numer.html")
 						.apartments-img-holder
 							img.apartments-img(src="/img/apartments/photo_5.jpg", alt="")
 						.apartments-item__text
 							.apartments-item__text-inner Эконом +
 				li.apartments-item
-					a.apartments-link(href="numers-in.html")
+					a.apartments-link(href="numer.html")
 						.apartments-img-holder
 							img.apartments-img(src="/img/apartments/photo_6.jpg", alt="")
 						.apartments-item__text
